--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -2,14 +2,14 @@ gem 'equalizer', :git => 'https://github.com/dkubb/equalizer.git'
 
 group :development do 
   gem 'rake',    '~> 0.9.2'
-  gem 'rspec',   '~> 1.3.2'
+  gem 'rspec',   '~> 2.12.0'
   gem 'yard',    '~> 0.8.3'
 end
 
 group :guard do
-  gem 'guard',         '~> 1.1.1'
-  gem 'guard-bundler', '~> 0.1.3'
-  gem 'guard-rspec',   '~> 0.7.3'
+  gem 'guard',         '~> 1.5.4'
+  gem 'guard-bundler', '~> 1.0.0'
+  gem 'guard-rspec',   '~> 2.1.1'
 end
 
 group :benchmarks do
@@ -38,16 +38,15 @@ group :metrics do
   platforms :mri_18 do
     gem 'arrayfields', '~> 4.7.4'  # for metric_fu
     gem 'fattr',       '~> 2.2.0'  # for metric_fu
-    gem 'heckle',      '~> 1.4.3'
     gem 'json',        '~> 1.7.3'  # for metric_fu rake task
     gem 'map',         '~> 6.0.1'  # for metric_fu
     gem 'metric_fu',   '~> 2.1.1'
     gem 'mspec',       '~> 1.5.17'
     gem 'rcov',        '~> 1.0.0'
-    gem 'ruby2ruby',   '= 1.2.2'   # for heckle
   end
 
   platforms :rbx do
     gem 'pelusa', '~> 0.2.1'
+    gem 'mutant', '~> 0.0.1', :git => 'https://github.com/mbj/mutant'
   end
 end
