--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -25,7 +25,7 @@ end
 group :metrics do
   gem 'flay',      '~> 1.4.2'
   gem 'flog',      '~> 2.5.1'
-  gem 'reek',      '~> 1.2.8', :github => 'dkubb/reek'
+  gem 'reek',      '~> 1.2.8', :git => 'https://github.com/dkubb/reek.git'
   gem 'roodi',     '~> 2.1.0'
   gem 'yardstick', '~> 0.7.0'
   gem 'simplecov'
