--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -10,6 +10,7 @@ group :guard do
   gem 'guard',         '~> 1.1.1'
   gem 'guard-bundler', '~> 0.1.3'
   gem 'guard-rspec',   '~> 0.7.3'
+  gem 'rb-inotify', :git => 'https://github.com/mbj/rb-inotify'
 end
 
 group :benchmarks do
