--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -1,4 +1,4 @@
-group :development do 
+group :development do
   gem 'rake',    '~> 0.9.2'
   gem 'rspec',   '~> 2.12.0'
   gem 'yard',    '~> 0.8.3'
@@ -30,21 +30,20 @@ group :metrics do
 
   # Mutant stuff
   gem 'mutant',    '~> 0.0.1', :git => 'https://github.com/mbj/mutant.git'
-  gem 'simplecov'
 
   platforms :ruby_18, :ruby_19 do
     # this indirectly depends on ffi which does not build on ruby-head
     gem 'yard-spellcheck', '~> 0.1.5'
   end
 
-  platforms :mri_18 do
+  platforms :mri_19 do
     gem 'arrayfields', '~> 4.7.4'  # for metric_fu
     gem 'fattr',       '~> 2.2.0'  # for metric_fu
     gem 'json',        '~> 1.7.3'  # for metric_fu rake task
     gem 'map',         '~> 6.0.1'  # for metric_fu
     gem 'metric_fu',   '~> 2.1.1'
     gem 'mspec',       '~> 1.5.17'
-    gem 'rcov',        '~> 1.0.0'
+    gem 'simplecov',   '~> 0.7'
   end
 
   platforms :rbx do
