--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ rvm:
   - jruby-19mode
   - rbx-18mode
   - rbx-19mode
+  - ruby-head
+  - ree
+  - jruby-head
 notifications:
   email:
     - mbj@seonic.net
