--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -1,14 +1,14 @@
 group :development do
-  gem 'rake',    '~> 10.0'
-  gem 'rspec',   '~> 2.12.0'
-  gem 'yard',    '~> 0.8.3'
+  gem 'rake',  '~> 10.0'
+  gem 'rspec', '~> 2.12.0'
+  gem 'yard',  '~> 0.8.3'
 end
 
 group :guard do
   gem 'guard',         '~> 1.5.4'
   gem 'guard-bundler', '~> 1.0.0'
   gem 'guard-rspec',   '~> 2.1.1'
-  gem 'rb-inotify', :git => 'https://github.com/mbj/rb-inotify'
+  gem 'rb-inotify',    '~> 0.8.8', :git => 'https://github.com/mbj/rb-inotify'
 end
 
 group :benchmarks do
@@ -24,10 +24,10 @@ end
 group :metrics do
   gem 'flay',      '~> 1.4.2'
   gem 'flog',      '~> 2.5.1'
+  gem 'mutant',    '~> 0.2.9'
   gem 'reek',      '~> 1.2.8', :git => 'https://github.com/dkubb/reek.git'
   gem 'roodi',     '~> 2.1.0'
   gem 'yardstick', '~> 0.8.0'
-  gem 'mutant',    '~> 0.2.9'
 
   platforms :ruby_18, :ruby_19 do
     # this indirectly depends on ffi which does not build on ruby-head
@@ -35,7 +35,7 @@ group :metrics do
   end
 
   platforms :mri_19 do
-    gem 'simplecov',   '~> 0.7'
+    gem 'simplecov', '~> 0.7'
   end
 
   platforms :rbx do
