Replace Float#round_to in flog task with Float#round from backports
* The Float#round method is available in ruby 1.9, backports
  adds a version that works in 1.8. Besides being made redundant
  the Float#round_to method here is buggy and not as well tested
  as the version from backports.

--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -22,6 +22,7 @@ platform :jruby do
 end
 
 group :metrics do
+  gem 'backports', '~> 2.6.5'
   gem 'flay',      '~> 1.4.2'
   gem 'flog',      '~> 2.5.1'
   gem 'mutant',    '~> 0.2.9'
