--- a/config/roodi.yml
+++ b/config/roodi.yml
@@ -1,18 +1,16 @@
 ---
-AbcMetricMethodCheck:            { score: 10.3 }
+AbcMetricMethodCheck:            { score: 4.0 }
 AssignmentInConditionalCheck:    { }
 CaseMissingElseCheck:            { }
-ClassLineCountCheck:             { line_count: 293 }
+ClassLineCountCheck:             { line_count: 121 }
 ClassNameCheck:                  { pattern: !ruby/regexp '/\A(?:[A-Z]+|[A-Z][a-z](?:[A-Z]?[a-z])+)\z/' }
 ClassVariableCheck:              { }
-CyclomaticComplexityBlockCheck:  { complexity: 2 }
-CyclomaticComplexityMethodCheck: { complexity: 4 }
+CyclomaticComplexityBlockCheck:  { complexity: 1 }
+CyclomaticComplexityMethodCheck: { complexity: 1 }
 EmptyRescueBodyCheck:            { }
 ForLoopCheck:                    { }
-# TODO: decrease line_count to 5 to 10
-MethodLineCountCheck:            { line_count: 14 }
-MethodNameCheck:                 { pattern: !ruby/regexp '/\A(?:[a-z\d](?:_?[a-z\d])+[?!=]?|\[\]=?|==|<=>|[+*&|-])\z/' }
-ModuleLineCountCheck:            { line_count: 295 }
+MethodLineCountCheck:            { line_count: 1 }
+MethodNameCheck:                 { pattern: !ruby/regexp '/\A(?:[a-z\d](?:_?[a-z\d])+[?!=]?|\[\]=?|==|<=>|<<|[+*&|-])\z/' }
+ModuleLineCountCheck:            { line_count: 139 }
 ModuleNameCheck:                 { pattern: !ruby/regexp '/\A(?:[A-Z]+|[A-Z][a-z](?:[A-Z]?[a-z])+)\z/' }
-# TODO: decrease parameter_count to 2 or less
-ParameterNumberCheck:            { parameter_count: 3 }
+ParameterNumberCheck:            { parameter_count: 1 }
