--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-before_install:
-  - gem install bundler 
 language: ruby
-script: 'bundle exec rake ci'
+before_install: gem install bundler
+bundler_args: --without yard guard benchmarks
+script: "bundle exec rake ci"
 rvm:
   - 1.8.7
   - 1.9.2
@@ -10,9 +10,10 @@ rvm:
   - jruby-19mode
   - rbx-18mode
   - rbx-19mode
-  - ruby-head
   - ree
+  - ruby-head
   - jruby-head
 notifications:
   email:
     - mbj@seonic.net
+    - dan.kubb@gmail.com
