--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -48,6 +48,10 @@ group :metrics do
     gem 'yard-spellcheck', '~> 0.1.5'
   end
 
+  platforms :ruby_18 do
+    gem 'rcov', '~> 1.0.0'
+  end
+
   platforms :mri_19 do
     gem 'simplecov', '~> 0.7.1'
   end
