--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -34,7 +34,7 @@ group :metrics do
   gem 'flay',      '~> 1.4.3'
   gem 'flog',      '~> 2.5.3'
   gem 'mutant',    '~> 0.2.15'
-  gem 'reek',      '~> 1.2.13', :git => 'https://github.com/troessner/reek.git'
+  gem 'reek',      '~> 1.2.13', :git => 'https://github.com/troessner/reek.git', :ref => 'ef77fcecaa21c9ebcbe4d9a79d41b0e70196bf18'
   gem 'roodi',     '~> 2.1.0'
   gem 'yardstick', '~> 0.8.0'
 
