--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,12 @@ rvm:
   - jruby-19mode
   - rbx-18mode
   - rbx-19mode
-  - ree
   - ruby-head
   - jruby-head
 notifications:
+  allowed_failures:
+    matrix:
+      - ree
   email:
     - mbj@seonic.net
     - dan.kubb@gmail.com
