--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,17 @@ before_install: gem install bundler
 bundler_args: --without yard guard benchmarks
 script: "bundle exec rake ci"
 rvm:
+  - ree
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - 2.0.0
+  - ruby-head
   - jruby-18mode
   - jruby-19mode
+  - jruby-head
   - rbx-18mode
   - rbx-19mode
-  - ruby-head
-  - jruby-head
 notifications:
   email:
     - mbj@seonic.net
