--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ rvm:
   - rbx-18mode
   - rbx-19mode
 notifications:
+  irc: "irc.freenode.org#datamapper"
   email:
     - mbj@seonic.net
     - dan.kubb@gmail.com
