--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -7,7 +7,7 @@ group :development do
 end
 
 group :yard do
-  gem 'redcarpet', '~> 2.2.2', :platforms => [ :mri, :rbx ]
+  gem 'kramdown', '~> 0.14.2'
 end
 
 group :guard do
