--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-before_install: gem install bundler
+before_install: gem install bundler --version 1.3.2  # 1.3.3 fails
 bundler_args: --without yard guard benchmarks
 script: "bundle exec rake ci"
 rvm:
@@ -19,3 +19,6 @@ notifications:
   email:
     - mbj@seonic.net
     - dan.kubb@gmail.com
+matrix:
+  allow_failures:
+    - rvm: jruby-head  # yard parser fails
