--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -30,6 +30,7 @@ end
 
 group :metrics do
   gem 'backports',       '~> 3.1', '>= 3.1.1'
+  gem 'coveralls',       '~> 0.6.2'
   gem 'flay',            '~> 2.1.0'
   gem 'flog',            '~> 3.2.2'
   gem 'reek',            '~> 1.3.1', :git => 'https://github.com/troessner/reek.git'
