--- a/config/reek.yml
+++ b/config/reek.yml
@@ -1,94 +1,102 @@
 ---
-UncommunicativeParameterName:
-  accept: []
-  exclude: []
-  enabled: true
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-LargeClass:
-  max_methods: 15
-  exclude: []
-  enabled: true
-  max_instance_variables: 12 # no adamantium ;)
-UncommunicativeMethodName:
-  accept: []
-  exclude: []
-  enabled: true
-  reject:
-  - !ruby/regexp /^[a-z]$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-LongParameterList:
-  max_params: 1
-  exclude: []
-  enabled: true
-  overrides: {}
-FeatureEnvy:
-  exclude: []
-  enabled: true
-ClassVariable:
-  exclude: []
-  enabled: true
-BooleanParameter:
-  exclude: []
-  enabled: true
-IrresponsibleModule:
-  exclude: []
-  enabled: true
-UncommunicativeModuleName:
-  accept: []
-  exclude: []
-  enabled: true
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-NestedIterators:
-  ignore_iterators: []
-  exclude: []
-  enabled: true
-  max_allowed_nesting: 1
-LongMethod:
-  max_statements: 5
-  exclude: []
-  enabled: true
-Duplication:
-  allow_calls: []
-  exclude: []
-  enabled: true
-  max_calls: 1
-UtilityFunction:
-  max_helper_calls: 0
-  exclude: []
-  enabled: true
 Attribute:
-  exclude: [
-    'Devtools::Config',
-    'Devtools::Project'
-  ]
   enabled: true
-UncommunicativeVariableName:
-  accept: []
+  exclude:
+    - Devtools::Config
+    - Devtools::Project
+BooleanParameter:
+  enabled: true
   exclude: []
+ClassVariable:
   enabled: true
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-SimulatedPolymorphism:
   exclude: []
+ControlParameter:
   enabled: true
-  max_ifs: 1
+  exclude: []
 DataClump:
-  exclude: []
   enabled: true
+  exclude: []
   max_copies: 0
   min_clump_size: 1
-ControlCouple:
-  exclude: []
+DuplicateMethodCall:
   enabled: true
+  exclude: []
+  max_calls: 1
+  allow_calls: []
+FeatureEnvy:
+  enabled: true
+  exclude: []
+IrresponsibleModule:
+  enabled: true
+  exclude: []
+LongParameterList:
+  enabled: true
+  exclude: []
+  max_params: 1
+  overrides: {}
 LongYieldList:
-  max_params: 0
-  exclude: []
   enabled: true
+  exclude: []
+  max_params: 0
+NestedIterators:
+  enabled: true
+  exclude: []
+  max_allowed_nesting: 1
+  ignore_iterators: []
+NilCheck:
+  enabled: true
+  exclude: []
+RepeatedConditional:
+  enabled: true
+  exclude: []
+  max_ifs: 1
+TooManyInstanceVariables:
+  enabled: true
+  exclude: []
+  max_instance_variables: 12 # no adamantium ;)
+TooManyMethods:
+  enabled: true
+  exclude: []
+  max_methods: 15
+TooManyStatements:
+  enabled: true
+  exclude: []
+  max_statements: 5
+UncommunicativeMethodName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^[a-z]$/
+    - !ruby/regexp /[0-9]$/
+    - !ruby/regexp /[A-Z]/
+  accept: []
+UncommunicativeModuleName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^.$/
+    - !ruby/regexp /[0-9]$/
+  accept: []
+UncommunicativeParameterName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^.$/
+    - !ruby/regexp /[0-9]$/
+    - !ruby/regexp /[A-Z]/
+  accept: []
+UncommunicativeVariableName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^.$/
+    - !ruby/regexp /[0-9]$/
+    - !ruby/regexp /[A-Z]/
+  accept: []
+UnusedParameters:
+  enabled: true
+  exclude: []
+UtilityFunction:
+  enabled: true
+  exclude: []
+  max_helper_calls: 0
