--- a/default/config/reek.yml
+++ b/default/config/reek.yml
@@ -1,97 +1,103 @@
 ---
-UnusedParameters:
-  enabled: true
-  exclude: []
-UncommunicativeParameterName:
-  accept: []
-  exclude: []
-  enabled: true
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-LargeClass:
-  max_methods: 10
-  exclude: []
-  enabled: true
-  max_instance_variables: 3
-UncommunicativeMethodName:
-  accept: []
-  exclude: []
-  enabled: true
-  reject:
-  - !ruby/regexp /^[a-z]$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-LongParameterList:
-  max_params: 3
-  exclude: []
-  enabled: true
-  overrides: {}
-FeatureEnvy:
-  exclude: []
-  enabled: true
-ClassVariable:
-  exclude: []
-  enabled: true
-BooleanParameter:
-  exclude: []
-  enabled: true
-IrresponsibleModule:
-  exclude: []
-  enabled: true
-UncommunicativeModuleName:
-  accept: []
-  exclude: []
-  enabled: true
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-NestedIterators:
-  ignore_iterators: []
-  exclude: []
-  enabled: true
-  max_allowed_nesting: 1
-LongMethod:
-  max_statements: 2
-  exclude:
-  - each
-Duplication:
-  allow_calls: []
-  exclude: []
-  enabled: true
-  max_calls: 1
-UtilityFunction:
-  max_helper_calls: 0
-  exclude: []
-  enabled: true
 Attribute:
-  exclude: []
-  enabled: false
-UncommunicativeVariableName:
-  accept: []
-  exclude: []
   enabled: true
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-SimulatedPolymorphism:
   exclude: []
+BooleanParameter:
   enabled: true
-  max_ifs: 1
+  exclude: []
+ClassVariable:
+  enabled: true
+  exclude: []
+ControlParameter:
+  enabled: true
+  exclude: []
 DataClump:
-  exclude: []
   enabled: true
+  exclude: []
   max_copies: 2
   min_clump_size: 2
-ControlCouple:
-  exclude: []
+DuplicateMethodCall:
   enabled: true
-LongYieldList:
+  exclude: []
+  max_calls: 1
+  allow_calls: []
+FeatureEnvy:
+  enabled: true
+  exclude: []
+IrresponsibleModule:
+  enabled: true
+  exclude: []
+LongParameterList:
+  enabled: true
+  exclude: []
   max_params: 2
-  exclude: []
+  overrides:
+    initialize:
+      max_params: 3
+LongYieldList:
   enabled: true
+  exclude: []
+  max_params: 2
+NestedIterators:
+  enabled: true
+  exclude: []
+  max_allowed_nesting: 1
+  ignore_iterators: []
 NilCheck:
   enabled: true
   exclude: []
+RepeatedConditional:
+  enabled: true
+  exclude: []
+  max_ifs: 1
+TooManyInstanceVariables:
+  enabled: true
+  exclude: []
+  max_instance_variables: 3
+TooManyMethods:
+  enabled: true
+  exclude: []
+  max_methods: 10
+TooManyStatements:
+  enabled: true
+  exclude:
+    - each
+  max_statements: 2
+UncommunicativeMethodName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^[a-z]$/
+    - !ruby/regexp /[0-9]$/
+    - !ruby/regexp /[A-Z]/
+  accept: []
+UncommunicativeModuleName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^.$/
+    - !ruby/regexp /[0-9]$/
+  accept: []
+UncommunicativeParameterName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^.$/
+    - !ruby/regexp /[0-9]$/
+    - !ruby/regexp /[A-Z]/
+  accept: []
+UncommunicativeVariableName:
+  enabled: true
+  exclude: []
+  reject:
+    - !ruby/regexp /^.$/
+    - !ruby/regexp /[0-9]$/
+    - !ruby/regexp /[A-Z]/
+  accept: []
+UnusedParameters:
+  enabled: true
+  exclude: []
+UtilityFunction:
+  enabled: true
+  exclude: []
+  max_helper_calls: 0
