--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -35,7 +35,10 @@ group :metrics do
   gem 'reek',            '~> 1.3.1', :git => 'https://github.com/troessner/reek.git'
   gem 'simplecov',       '~> 0.7.1'
   gem 'yardstick',       '~> 0.9.6'
-  gem 'yard-spellcheck', '~> 0.1.5'
+
+  platforms :ruby_19 do
+    gem 'yard-spellcheck', '~> 0.1.5'
+  end
 
   platforms :mri_19, :rbx do
     gem 'mutant', '~> 0.2.20'
