--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -40,7 +40,7 @@ group :metrics do
     gem 'yard-spellcheck', '~> 0.1.5'
   end
 
-  platforms :mri_19, :rbx do
+  platforms :ruby_19, :ruby_20 do
     gem 'mutant', '~> 0.3.beta4'
   end
 
