Update rubocop task to load the config file directly

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -1,6 +1,6 @@
 AllCops:
   Includes:
-    - '**/*.rake'
+    - '../**/*.rake'
 
 # Avoid parameter lists longer than five parameters.
 ParameterLists:
