--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -1,6 +1,8 @@
 AllCops:
   Includes:
     - '../**/*.rake'
+  Excludes:
+    - '../vendor/**'
 
 # Avoid parameter lists longer than five parameters.
 ParameterLists:
