--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -2,7 +2,7 @@
 
 group :development do
   gem 'rake',  '~> 10.1.0'
-  gem 'rspec', '~> 2.13.0'
+  gem 'rspec', '~> 2.14.1'
   gem 'yard',  '~> 0.8.6.2'
 end
 
@@ -33,12 +33,12 @@ group :metrics do
   gem 'flay',      '~> 2.3.1'
   gem 'flog',      '~> 4.1.1'
   gem 'reek',      '~> 1.3.1', :git => 'https://github.com/troessner/reek.git'
-  gem 'rubocop',   '~> 0.9.1'
+  gem 'rubocop',   '~> 0.9.1', :git => 'https://github.com/bbatsov/rubocop.git'
   gem 'simplecov', '~> 0.7.1'
   gem 'yardstick', '~> 0.9.6'
 
   platforms :ruby_19, :ruby_20 do
-    gem 'mutant',          '~> 0.3.0.beta13'
+    gem 'mutant',          '~> 0.3.0.beta15'
     gem 'yard-spellcheck', '~> 0.1.5'
   end
 
