--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -15,6 +15,7 @@ group :guard do
   gem 'guard-bundler', '~> 1.0.0'
   gem 'guard-rspec',   '~> 3.0.2'
   gem 'guard-rubocop', '~> 0.2.0'
+  gem 'guard-mutant',  '~> 0.0.1'
 
   # file system change event handling
   gem 'listen',     '~> 1.2.2'
@@ -38,7 +39,7 @@ group :metrics do
   gem 'yardstick', '~> 0.9.6'
 
   platforms :ruby_19, :ruby_20 do
-    gem 'mutant',          '~> 0.3.0.beta15'
+    gem 'mutant',          '~> 0.3.0.beta16'
     gem 'yard-spellcheck', '~> 0.1.5'
   end
 
