--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,10 @@ before_install: gem install bundler
 bundler_args: --without yard guard benchmarks
 script: "bundle exec rake ci"
 rvm:
-  - 1.9.2
   - 1.9.3
   - 2.0.0
   - ruby-head
   - rbx-19mode
-  - jruby-19mode
-  - jruby-head
 notifications:
   irc:
     channels:
@@ -23,6 +20,11 @@ notifications:
     on_success: never
     on_failure: change
 matrix:
+  include:
+    - rvm: jruby-19mode
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: jruby-head
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
   allow_failures:
-    # bundler installation error
+    # broken on travis
     - rvm: ruby-head
