--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -11,6 +11,10 @@ ParameterLists:
   Max: 3
   CountKeywordArgs: true
 
+MethodLength:
+  CountComments: false
+  Max: 14
+
 # Avoid more than `Max` levels of nesting.
 BlockNesting:
   Max: 3
