--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -38,7 +38,7 @@ AccessControl:
 
 # Limit line length
 LineLength:
-  Max: 79
+  Max: 113  # TODO: lower to 79 once the rubocop branch in shared/Gemfile is removed
 
 # Disable documentation checking until a class needs to be documented once
 Documentation:
