--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -34,7 +34,7 @@ group :metrics do
   gem 'flay',      '~> 2.4.0'
   gem 'flog',      '~> 4.1.1'
   gem 'reek',      '~> 1.3.1',  git: 'https://github.com/troessner/reek.git'
-  gem 'rubocop',   '~> 0.10.0', git: 'https://github.com/rom-rb/rubocop.git', branch: 'upgrade-parser-dependency'
+  gem 'rubocop',   '~> 0.10.0', git: 'https://github.com/bbatsov/rubocop.git'
   gem 'simplecov', '~> 0.7.1'
   gem 'yardstick', '~> 0.9.6', git: 'https://github.com/dkubb/yardstick.git'
 
