Update rubocop configuration to have common settings

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
     - 'Gemfile.devtools'
   Excludes:
     - '**/vendor/**'
+    - '**/benchmarks/**'
 
 # Avoid parameter lists longer than five parameters.
 ParameterLists:
