--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   Includes:
     - '**/*.rake'
     - 'Gemfile'
-    - 'Gemfile.devtools'
+    - 'Gemfile.develry'
   Excludes:
     - '**/vendor/**'
     - '**/benchmarks/**'
