Change rubocop config to allow empty lines around body

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -34,7 +34,7 @@ CollectionMethods:
 # sections of code and visually separate them. When the keyword is at the same
 # level I think it sort of blends in with the def keywords and makes it harder
 # to scan the code and see where the sections are.
-AccessControl:
+AccessModifierIndentation:
   Enabled: false
 
 # Limit line length
@@ -63,4 +63,8 @@ TrivialAccessors:
 
 # Do not prefer do/end over {} for multiline blocks
 Blocks:
+  Enabled: false
+
+# Allow empty lines around body
+EmptyLinesAroundBody:
   Enabled: false
