Use Ruby 1.8-compatible hash syntax

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -68,3 +68,7 @@ Blocks:
 # Allow empty lines around body
 EmptyLinesAroundBody:
   Enabled: false
+
+# Enforce Ruby 1.8-compatible hash syntax
+HashSyntax:
+  EnforcedStyle: hash_rockets
