--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -15,13 +15,13 @@ group :yard do
 end
 
 group :guard do
-  gem 'guard',         '~> 2.2.4'
-  gem 'guard-bundler', '~> 2.0.0'
-  gem 'guard-rspec',   '~> 4.0.4'
-  gem 'guard-rubocop', '~> 1.0.0'
+  gem 'guard',         '~> 1.8'
+  gem 'guard-bundler', '~> 1.0'
+  gem 'guard-rspec',   '~> 3.0'
+  gem 'guard-rubocop', '~> 0.2', :platforms => [:ruby_19, :ruby_20]
 
   # file system change event handling
-  gem 'listen',     '~> 2.2.0'
+  gem 'listen',     '~> 1.3'
   gem 'rb-fchange', '~> 0.0.6', :require => false
   gem 'rb-fsevent', '~> 0.9.3', :require => false
   gem 'rb-inotify', '~> 0.9.0', :require => false
@@ -33,13 +33,14 @@ group :guard do
 end
 
 group :metrics do
-  gem 'coveralls', '~> 0.7.0'
-  gem 'flay',      '~> 2.4.0'
-  gem 'flog',      '~> 4.2.0'
-  gem 'reek',      '~> 1.3.2'
-  gem 'rubocop',   '~> 0.15.0'
-  gem 'simplecov', '~> 0.8.2'
-  gem 'yardstick', '~> 0.9.7', :git => 'https://github.com/dkubb/yardstick.git'
+  gem 'coveralls',  '~> 0.7.0'
+  gem 'flay',       '~> 2.4.0'
+  gem 'flog',       '~> 4.2.0'
+  gem 'mime-types', '~> 1.25', :platforms => :ruby_18
+  gem 'reek',       '~> 1.3.2'
+  gem 'rubocop',    '~> 0.15.0', :platforms => [:ruby_19, :ruby_20]
+  gem 'simplecov',  '~> 0.8.2'
+  gem 'yardstick',  '~> 0.9.7', :git => 'https://github.com/dkubb/yardstick.git'
 
   platforms :ruby_19, :ruby_20 do
     gem 'mutant',          '~> 0.3.0.rc3', :git => 'https://github.com/mbj/mutant.git'
