--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,27 @@
 language: ruby
+cache: bundler
 bundler_args: --without yard guard benchmarks
 script: "bundle exec rake ci"
 rvm:
   - 1.9.3
   - 2.0.0
+  - 2.1.0
   - ruby-head
   - rbx
 matrix:
   include:
     - rvm: jruby-19mode
-      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
+    - rvm: jruby-20mode
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
+    - rvm: jruby-21mode
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
     - rvm: jruby-head
-      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
+  fast_finish: true
 notifications:
   irc:
     channels:
       - irc.freenode.org#rom-rb
-    on_success: never
-    on_failure: change
-  email:
-    recipients:
-      - dan.kubb@gmail.com
-      - mbj@schirp-dso.com
     on_success: never
     on_failure: change
