--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -42,7 +42,8 @@ group :metrics do
   gem 'yardstick', '~> 0.9.9'
 
   platforms :mri do
-    gem 'mutant', '~> 0.3.4'
+    gem 'mutant',       git: 'https://github.com/mbj/mutant.git'
+    gem 'mutant-rspec', git: 'https://github.com/mbj/mutant.git'
   end
 
   platforms :ruby_19, :ruby_20 do
