--- a/default/config/rubocop.yml
+++ b/default/config/rubocop.yml
@@ -12,6 +12,10 @@ ParameterLists:
   Max: 3
   CountKeywordArgs: true
 
+MethodLength:
+  CountComments: false
+  Max: 10
+
 # Avoid more than `Max` levels of nesting.
 BlockNesting:
   Max: 3
@@ -57,6 +61,27 @@ ConstantName:
 TrivialAccessors:
   Enabled: false
 
+# Do not prefer do/end over {} for multiline blocks
+Blocks:
+  Enabled: false
+
 # Allow empty lines around body
 EmptyLinesAroundBody:
   Enabled: false
+
+# Prefer String#% over Kernel#sprintf
+FormatString:
+  Enabled: false
+
+# Use square brackets for literal Array objects
+PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%':  ()
+    '%i': '[]'
+    '%q': ()
+    '%Q': ()
+    '%r': '{}'
+    '%s': ()
+    '%w': '[]'
+    '%W': '[]'
+    '%x': ()
