--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -8,6 +8,7 @@ group :development do
 
   platform :rbx do
     gem 'rubysl-singleton', '~> 2.0.0'
+    gem 'rubinius-coverage', '~> 2.0.1'
   end
 end
 
