--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
   - '2.0'
   - '2.1'
   - jruby-19mode
-  - rbx2
+  - rbx
 matrix:
   allow_failures:
     - rvm: ruby-head # parser cannot handle it jet per default
