--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -5,10 +5,6 @@ ParameterLists:
   Max: 3
   CountKeywordArgs: true
 
-MethodLength:
-  CountComments: false
-  Max: 15
-
 # Avoid more than `Max` levels of nesting.
 BlockNesting:
   Max: 3
@@ -20,6 +16,9 @@ CollectionMethods:
     inject:   'reduce'
     find:     'detect'
     find_all: 'select'
+  Exclude:
+    # The Pathname#find method is mistakenly identified as Enumberable#find
+    - lib/tasks/assets_precompile_nodigest.rake
 
 # Do not force public/protected/private keyword to be indented at the same
 # level as the def keyword. My personal preference is to outdent these keywords
@@ -32,10 +31,14 @@ AccessModifierIndentation:
 
 # Limit line length
 LineLength:
-  Max: 113  # TODO: lower to 79 once the rubocop branch in shared/Gemfile is removed
+  Max: 106
 
 # Disable documentation checking until a class needs to be documented once
 Documentation:
+  Enabled: false
+
+# Do not always use &&/|| instead of and/or.
+AndOr:
   Enabled: false
 
 # Do not favor modifier if/unless usage when you have a single-line body
@@ -54,12 +57,20 @@ ConstantName:
 TrivialAccessors:
   Enabled: false
 
-# Do not prefer do/end over {} for multiline blocks
-Blocks:
+# Allow empty lines around class body
+EmptyLinesAroundClassBody:
   Enabled: false
 
-# Allow empty lines around body
-EmptyLinesAroundBody:
+# Allow empty lines around module body
+EmptyLinesAroundModuleBody:
+  Enabled: false
+
+# Allow empty lines around block body
+EmptyLinesAroundBlockBody:
+  Enabled: false
+
+# Allow multiple line operations to not require indentation
+MultilineOperationIndentation:
   Enabled: false
 
 # Prefer String#% over Kernel#sprintf
@@ -69,7 +80,7 @@ FormatString:
 # Use square brackets for literal Array objects
 PercentLiteralDelimiters:
   PreferredDelimiters:
-    '%':  ()
+    '%':  '{}'
     '%i': '[]'
     '%q': ()
     '%Q': ()
@@ -78,3 +89,40 @@ PercentLiteralDelimiters:
     '%w': '[]'
     '%W': '[]'
     '%x': ()
+
+# Indent hashes
+IndentHash:
+  Exclude:
+    # Disable when formatting is better than recommendation
+    - app/models/mrh/product/profile.rb
+
+# Align if/else blocks with the variable assignment
+EndAlignment:
+  AlignWith: variable
+
+# Use a single space before the first argument
+SingleSpaceBeforeFirstArg:
+  Exclude:
+    # Alignment of similar methods is more important
+    - app/models/mrh/spree_ext/variant.rb
+
+# Do not always align parameters when it is easier to read
+AlignParameters:
+  Exclude:
+    - spec/**/*_spec.rb
+
+# Prefer #kind_of? over #is_a?
+ClassCheck:
+  EnforcedStyle: kind_of?
+
+# Do not prefer double quotes to be used when %q or %Q is more appropriate
+UnneededPercentQ:
+  Enabled: false
+
+# Allow a maximum ABC score
+Metrics/AbcSize:
+  Max: 20.1
+
+# Do not prefer lambda.call(...) over lambda.(...)
+LambdaCall:
+  Enabled: false
