--- a/shared/Gemfile
+++ b/shared/Gemfile
@@ -37,7 +37,7 @@ group :metrics do
   gem 'simplecov', '~> 0.9.1'
   gem 'yardstick', '~> 0.9.9'
 
-  platforms :mri_20, :mri_21, :ruby_22 do
+  platforms :mri_20, :mri_21 do
     gem 'mutant',       '~> 0.7.4'
     gem 'mutant-rspec', '~> 0.7.4'
   end
