Change rubocop config to disable ExtraSpacing cop
ExtraSpacing is enabled by default in rubocop 0.33 and it does
not align with the conventions used in devtools so we disable it.

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -111,3 +111,7 @@ Metrics/AbcSize:
 # Do not prefer lambda.call(...) over lambda.(...)
 LambdaCall:
   Enabled: false
+
+# Allow additional spaces
+ExtraSpacing:
+  Enabled: false
