Refactor config to allow value checks
* Backfill value checks for all configs

--- a/config/reek.yml
+++ b/config/reek.yml
@@ -31,7 +31,8 @@ IrresponsibleModule:
   exclude: []
 LongParameterList:
   enabled: true
-  exclude: []
+  exclude:
+  - Devtools::Config#self.attribute
   max_params: 2
   overrides: {}
 LongYieldList:
