--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -1,4 +1,8 @@
-inherit_from: ../.rubocop.yml
+AllCops:
+  Include:
+    - 'Gemfile'
+  Exclude:
+    - 'vendor/**/*'
 
 # Avoid parameter lists longer than five parameters.
 ParameterLists:
