Upgrade gem dependencies
* Interface changes in flay 2.8.0 prevent it from being upgraded. We
  currently use them within Devtools to find all the matching files for
  reek to process. The method was returned and replaced with a class but
  I am not sure how to use it yet. The safest option at this point was
  for me to lock the dep until someone is able to investigate the change
  and update devtools.

--- a/config/reek.yml
+++ b/config/reek.yml
@@ -49,6 +49,10 @@ RepeatedConditional:
   enabled: true
   exclude: []
   max_ifs: 1
+TooManyConstants:
+  enabled: true
+  exclude:
+  - Devtools
 TooManyInstanceVariables:
   enabled: true
   exclude: []
