Add bundler to CircleCI config

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,9 @@
 machine:
   ruby:
     version: '2.2.3'
+dependencies:
+  pre:
+    - gem install bundler
 test:
   override:
     - bundle exec rake ci
