Suppress Ruby 2.4 deprecation warnings re Fixnum
- Update SimpleCov to v0.14.1, which fixes warnings coming from that gem
- Use 0.class as integer class indicator, it will work on both, 2.3 and
  2.4.
- Remove unused shared/spec/shared/hash_method_behavior.rb file.
- Update Ruby version on CircleCI to 2.4.1
- Update reek gem dependency to ~> 4.6.0, to relax implicit constraint
  on parser version.
- Disable RuboCop FrozenStringLiteralComment cop
- Increase Flay total_score to 115

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -128,3 +128,6 @@ RedundantFreeze:
 # Prefer using `fail` when raising and `raise` when reraising
 SignalException:
   EnforcedStyle: semantic
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
