Update rubocop to 0.52.1
* Clean up

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -6,7 +6,13 @@ AllCops:
 Metrics/BlockLength:
   Exclude:
   # Ignore RSpec DSL
-  - spec/**/*
+    - spec/**/*
+  # Ignore gemspec DSL
+    - '*.gemspec'
+
+Naming/FileName:
+  Exclude:
+    - Rakefile
 
 # Avoid parameter lists longer than five parameters.
 ParameterLists:
