--- a/config/reek.yml
+++ b/config/reek.yml
@@ -1,106 +1,106 @@
 ---
-Attribute:
-  enabled: false
-  exclude: []
-BooleanParameter:
-  enabled: true
-  exclude: []
-ClassVariable:
-  enabled: true
-  exclude: []
-ControlParameter:
-  enabled: true
-  exclude: []
-DataClump:
-  enabled: true
-  exclude: []
-  max_copies: 0
-  min_clump_size: 2
-DuplicateMethodCall:
-  enabled: true
-  exclude: []
-  max_calls: 1
-  allow_calls: []
-FeatureEnvy:
-  enabled: true
-  exclude: []
-IrresponsibleModule:
-  enabled: true
-  exclude: []
-LongParameterList:
-  enabled: true
-  exclude:
-  - Devtools::Config#self.attribute
-  max_params: 2
-  overrides: {}
-LongYieldList:
-  enabled: true
-  exclude: []
-  max_params: 0
-NestedIterators:
-  enabled: true
-  exclude: []
-  max_allowed_nesting: 1
-  ignore_iterators: []
-NilCheck:
-  enabled: true
-  exclude: []
-RepeatedConditional:
-  enabled: true
-  exclude: []
-  max_ifs: 1
-TooManyConstants:
-  enabled: true
-  exclude:
-  - Devtools
-TooManyInstanceVariables:
-  enabled: true
-  exclude: []
-  max_instance_variables: 2
-TooManyMethods:
-  enabled: true
-  exclude: []
-  max_methods: 15
-TooManyStatements:
-  enabled: true
-  exclude: []
-  max_statements: 5
-UncommunicativeMethodName:
-  enabled: true
-  exclude: []
-  reject:
-  - !ruby/regexp /^[a-z]$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-  accept: []
-UncommunicativeModuleName:
-  enabled: true
-  exclude: []
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  accept: []
-UncommunicativeParameterName:
-  enabled: true
-  exclude: []
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-  accept: []
-UncommunicativeVariableName:
-  enabled: true
-  exclude: []
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-  accept: []
-UnusedParameters:
-  enabled: true
-  exclude: []
-UtilityFunction:
-  enabled: true
-  exclude:
-  - Devtools::Project::Initializer::Rspec#require_files # intentional for deduplication
-  max_helper_calls: 0
+detectors:
+  Attribute:
+    enabled: false
+    exclude: []
+  BooleanParameter:
+    enabled: true
+    exclude: []
+  ClassVariable:
+    enabled: true
+    exclude: []
+  ControlParameter:
+    enabled: true
+    exclude: []
+  DataClump:
+    enabled: true
+    exclude: []
+    max_copies: 0
+    min_clump_size: 2
+  DuplicateMethodCall:
+    enabled: true
+    exclude: []
+    max_calls: 1
+    allow_calls: []
+  FeatureEnvy:
+    enabled: true
+    exclude: []
+  IrresponsibleModule:
+    enabled: true
+    exclude: []
+  LongParameterList:
+    enabled: true
+    exclude:
+    - Devtools::Config#self.attribute
+    max_params: 2
+    overrides: {}
+  LongYieldList:
+    enabled: true
+    exclude: []
+    max_params: 0
+  NestedIterators:
+    enabled: true
+    exclude: []
+    max_allowed_nesting: 1
+    ignore_iterators: []
+  NilCheck:
+    enabled: true
+    exclude: []
+  RepeatedConditional:
+    enabled: true
+    exclude: []
+    max_ifs: 1
+  TooManyConstants:
+    enabled: true
+    exclude:
+    - Devtools
+  TooManyInstanceVariables:
+    enabled: true
+    exclude: []
+    max_instance_variables: 2
+  TooManyMethods:
+    enabled: true
+    exclude: []
+    max_methods: 15
+  TooManyStatements:
+    enabled: true
+    exclude: []
+    max_statements: 5
+  UncommunicativeMethodName:
+    enabled: true
+    exclude: []
+    reject:
+    - '/^[a-z]$/'
+    - '/[0-9]$/'
+    - '/[A-Z]/'
+    accept: []
+  UncommunicativeModuleName:
+    enabled: true
+    exclude: []
+    reject:
+    - '/^.$/'
+    - '/[0-9]$/'
+    accept: []
+  UncommunicativeParameterName:
+    enabled: true
+    exclude: []
+    reject:
+    - '/^.$/'
+    - '/[0-9]$/'
+    - '/[A-Z]/'
+    accept: []
+  UncommunicativeVariableName:
+    enabled: true
+    exclude: []
+    reject:
+    - '/^.$/'
+    - '/[0-9]$/'
+    - '/[A-Z]/'
+    accept: []
+  UnusedParameters:
+    enabled: true
+    exclude: []
+  UtilityFunction:
+    enabled: true
+    exclude:
+    - Devtools::Project::Initializer::Rspec#require_files # intentional for deduplication
