--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       - checkout
       - run: bundle install
-      - run: bundle exec mutant --since origin/master -- 'Devtools*'
+      - run: bundle exec mutant --since HEAD~1 -- 'Devtools*'
 workflows:
   version: 2
   test:
